--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,15 @@
 <h1>New Article</h1>
 
+<% if @article.errors.any? %>
+  <h3><%= pluralize(@article.errors.count, "error") %> prohibited
+        this article from being saved:</h3>
+  <ul>
+    <% @article.errors.full_messages.each do |error| %>
+      <li><%= error %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_with scope: :article, url: articles_path, local: true do |form| %>
   <p>
     <%= form.label :title %><br>
@@ -15,3 +25,5 @@
     <%= form.submit %>
   </p>
 <% end %>
+
+<%= link_to 'Back', articles_path %>
