--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,15 +1,15 @@
-<h1>New Article</h1>
+<h1>Edit article</h1>
 
-<%= form_with scope: :article, url: articles_path, local: true do |form| %>
+<%= form_for @article do |form| %>
 
   <% if @article.errors.any? %>
     <h3>
       <%= pluralize(@article.errors.count, "error") %> prohibited
-          this article from being saved:
+      this article from being saved:
     </h3>
     <ul>
-      <% @article.errors.full_messages.each do |error| %>
-        <li><%= error %></li>
+      <% @article.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
       <% end %>
     </ul>
   <% end %>
@@ -27,6 +27,7 @@
   <p>
     <%= form.submit %>
   </p>
+
 <% end %>
 
 <%= link_to 'Back', articles_path %>
