--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,6 +11,7 @@
     <tr>
       <td><%= article.title %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
+      <td><%= link_to 'Edit', edit_article_path(article) %></td>
     </tr>
   <% end %>
 </table>
