--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,4 +11,6 @@
 </p>
 
 <%= link_to 'Edit', edit_article_path %>
+<%= link_to 'Delete', article_path,
+        method: :delete, data: {confirm: "Are you sure?"} %>
 <%= link_to 'Back', articles_path %>
