--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -3,5 +3,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Delete', article_path,
-        method: :delete, data: {confirm: "Are you sure?"} %>
+        method: :delete, data: {confirm: "Are you sure?"} %> |
 <%= link_to 'Back', articles_path %>
