--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,7 +10,7 @@
   <%= @article.text %>
 </p>
 
-<%= link_to 'Edit', edit_article_path %>
+<%= link_to 'Edit', edit_article_path %> |
 <%= link_to 'Delete', article_path,
-        method: :delete, data: {confirm: "Are you sure?"} %>
+        method: :delete, data: {confirm: "Are you sure?"} %> |
 <%= link_to 'Back', articles_path %>
