--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -23,7 +23,7 @@
   </div>
 
   <div>
-    <%= form.submit :class => "btn btn-primary btn-lg btn-block" %>
+    <%= form.submit :class => "btn btn-primary" %>
   </div>
 
 <% end %>
